@@ -1,33 +1,34 @@
-///////////////////////////////////////////////////////////////////////////
-//
-// Copyright (c) 2000-2003 Intel Corporation 
-// All rights reserved. 
-//
-// Redistribution and use in source and binary forms, with or without 
-// modification, are permitted provided that the following conditions are met: 
-//
-// * Redistributions of source code must retain the above copyright notice, 
-// this list of conditions and the following disclaimer. 
-// * Redistributions in binary form must reproduce the above copyright notice, 
-// this list of conditions and the following disclaimer in the documentation 
-// and/or other materials provided with the distribution. 
-// * Neither name of Intel Corporation nor the names of its contributors 
-// may be used to endorse or promote products derived from this software 
-// without specific prior written permission.
-// 
-// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
-// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
-// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR 
-// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL INTEL OR 
-// CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, 
-// EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, 
-// PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR 
-// PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY 
-// OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-// NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
-// SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-//
-///////////////////////////////////////////////////////////////////////////
+/*******************************************************************************
+ *
+ * Copyright (c) 2000-2003 Intel Corporation 
+ * All rights reserved. 
+ *
+ * Redistribution and use in source and binary forms, with or without 
+ * modification, are permitted provided that the following conditions are met: 
+ *
+ * - Redistributions of source code must retain the above copyright notice, 
+ * this list of conditions and the following disclaimer. 
+ * - Redistributions in binary form must reproduce the above copyright notice, 
+ * this list of conditions and the following disclaimer in the documentation 
+ * and/or other materials provided with the distribution. 
+ * - Neither name of Intel Corporation nor the names of its contributors 
+ * may be used to endorse or promote products derived from this software 
+ * without specific prior written permission.
+ * 
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR 
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL INTEL OR 
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, 
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, 
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR 
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY 
+ * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ ******************************************************************************/
+
 
 /************************************************************************
 * Purpose: This file defines the functionality making use of the http 
@@ -651,8 +652,9 @@ http_Download( IN const char *url_str,
         return ret_code;
     }
 
-    UpnpPrintf( UPNP_INFO, HTTP, __FILE__, __LINE__,
-        "HTTP Buffer:\n %s\n----------END--------\n", request.buf );
+    UpnpPrintf(UPNP_INFO, HTTP, __FILE__, __LINE__,
+        "HTTP Buffer:\n%s\n" "----------END--------\n",
+        request.buf);
     // get doc msg
     ret_code =
         http_RequestAndResponse( &url, request.buf, request.length,
@@ -822,9 +824,9 @@ MakePostMessage( const char *url_str,
         return ret_code;
     }
 
-    UpnpPrintf( UPNP_INFO, HTTP, __FILE__, __LINE__,
-        "HTTP Buffer:\n %s\n" "----------END--------\n",
-        request->buf );
+    UpnpPrintf(UPNP_INFO, HTTP, __FILE__, __LINE__,
+        "HTTP Buffer:\n%s\n" "----------END--------\n",
+        request->buf);
 
     return UPNP_E_SUCCESS;
 }
@@ -1141,9 +1143,9 @@ MakeGetMessage( const char *url_str,
         return ret_code;
     }
 
-    UpnpPrintf( UPNP_INFO, HTTP, __FILE__, __LINE__,
-        "HTTP Buffer:\n %s\n" "----------END--------\n",
-        request->buf );
+    UpnpPrintf(UPNP_INFO, HTTP, __FILE__, __LINE__,
+        "HTTP Buffer:\n%s\n" "----------END--------\n",
+        request->buf);
 
     return UPNP_E_SUCCESS;
 }
@@ -2147,9 +2149,9 @@ MakeGetMessageEx( const char *url_str,
         }
     } while( 0 );
 
-    UpnpPrintf( UPNP_INFO, HTTP, __FILE__, __LINE__,
-        "HTTP Buffer:\n %s\n" "----------END--------\n",
-        request->buf );
+    UpnpPrintf(UPNP_INFO, HTTP, __FILE__, __LINE__,
+        "HTTP Buffer:\n%s\n" "----------END--------\n",
+        request->buf);
 
     return errCode;
 }
